--- a/autoapp/src/main/resources/templates/userPage.html
+++ b/autoapp/src/main/resources/templates/userPage.html
@@ -1,5 +1,15 @@
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+   <head>
+      <title th:utext="${title}"></title>
+ 
+    <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
 <!-- Include _menu.html -->
-<th:block th:include="/header"></th:block>
 <th:block th:include="/_menu"></th:block>
 
 <h3>Capture inputs and call shell script</h3>
@@ -49,6 +59,5 @@
 		</div>
 	</div>
 </div>
-
-
-<th:block th:include="/footer"></th:block>
+</body>
+</html>
