--- a/autoapp/src/main/resources/static/css/admin.css
+++ b/autoapp/src/main/resources/static/css/admin.css
@@ -357,3 +357,31 @@ header-fixed {
     border-radius: 5px;
 }
 
+
+div#divHeader{height: 70px;
+position: relative; top: 0px; left: 0px; width:100%; margin: 0 auto; background-color: #f8f9fa; 
+}
+div#divHeaderTitle{font-size: 28px; font-weight: normal; float: left; margin-top: 20px; margin-left: 15px;font-family: Calibri;
+font-size: 18.5px;
+font-weight: bold; }
+div#divHeaderVersion{text-align: left; font-size: 10px; font-weight: normal; }
+div#divHeaderIcon {float: right; width: 30vw; }
+img#imgHeaderLogo {height:69px; float: right; }
+
+input#username{font-family:calibri,sans-serif;outline:0;width:100%;border:0;padding:10px;font-size:14px;background:#f2f2f2;margin:0 0 15px;box-sizing:border-box}
+input#password{font-family:calibri,sans-serif;outline:0;width:100%;border:0;padding:10px;font-size:14px;background:#f2f2f2;margin:0 0 15px;box-sizing:border-box}
+button#loginbutton{text-transform:uppercase;
+font-family:calibri;outline:0;width:100%;border:0;padding:10px;font-size:14px;background:#888;margin:0 0 15px;box-sizing:border-box}
+
+.format {
+	width: 290px;box-sizing: inherit; position: relative; 
+ 	 margin-right: auto; min-height: 150px;
+    background: #FFF;
+    padding: 45px;
+    text-align: center;
+    box-shadow: 0 0 20px 0 rgba(0,0,0,.2), 0 5px 5px 0 rgba(0,0,0,.24);
+    font-size: 8px;
+}
+
+div#footer{height:30px;background-color:#444;
+}
